// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should disable selection of unavailable layers and show a warning 1`] = `
<div
  class="basemap-switcher-select chakra-select__root css-3jlqt6"
  data-part="root"
  data-scope="select"
  dir="ltr"
  id="select:«r9»"
>
  <div
    class="chakra-select__control css-17j1053"
    data-part="control"
    data-scope="select"
    data-state="closed"
    dir="ltr"
    id="select:«r9»:control"
  >
    <button
      aria-controls="select:«r9»:content"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="select:«r9»:label"
      class="basemap-switcher-select-trigger chakra-select__trigger css-1hl2915"
      data-part="trigger"
      data-scope="select"
      data-state="closed"
      dir="ltr"
      id="select:«r9»:trigger"
      role="combobox"
      type="button"
    >
      <span
        class="chakra-select__valueText css-176t9sc"
        data-part="value-text"
        data-scope="select"
        dir="ltr"
      >
        OSM
      </span>
    </button>
    <div
      class="chakra-select__indicatorGroup css-1fx1ifu"
    >
      <div
        aria-hidden="true"
        class="chakra-select__indicator css-1atg1ut"
        data-part="indicator"
        data-scope="select"
        data-state="closed"
        dir="ltr"
      >
        <svg
          class="css-s3mb0o"
          viewBox="0 0 24 24"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`should successfully create a basemap switcher component 1`] = `
<div
  class="basemap-switcher css-0"
  data-testid="switcher"
>
  <div
    class="basemap-switcher-select chakra-select__root css-3jlqt6"
    data-part="root"
    data-scope="select"
    dir="ltr"
    id="select:«r0»"
  >
    <div
      class="chakra-select__control css-17j1053"
      data-part="control"
      data-scope="select"
      data-state="open"
      dir="ltr"
      id="select:«r0»:control"
    >
      <button
        aria-controls="select:«r0»:content"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-labelledby="select:«r0»:label"
        class="basemap-switcher-select-trigger chakra-select__trigger css-1hl2915"
        data-part="trigger"
        data-placement="bottom-start"
        data-scope="select"
        data-state="open"
        dir="ltr"
        id="select:«r0»:trigger"
        role="combobox"
        type="button"
      >
        <span
          class="chakra-select__valueText css-176t9sc"
          data-part="value-text"
          data-scope="select"
          dir="ltr"
        >
          emptyBasemapLabel
        </span>
      </button>
      <div
        class="chakra-select__indicatorGroup css-1fx1ifu"
      >
        <div
          aria-hidden="true"
          class="chakra-select__indicator css-1atg1ut"
          data-part="indicator"
          data-scope="select"
          data-state="open"
          dir="ltr"
        >
          <svg
            class="css-s3mb0o"
            viewBox="0 0 24 24"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
